fix: overflow auto to avoid background of scroll

--- a/src/components/Landing/Portfolio/index.css
+++ b/src/components/Landing/Portfolio/index.css
@@ -37,14 +37,14 @@
 
 .item {
     min-height: 120px;
-    overflow: hidden;
+    overflow: auto;
     box-shadow:
   0  5px 10px rgba(154,160,185,0.05),
   0 15px 40px rgba(166,173,201,0.2);
 }
 
 .item img {
-    overflow: hidden;
+    /* overflow: hidden; */
     width: 100%;
     height: 80%;
 }
